# slurmboard

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: pre-commit.yaml
src/: app.rs  args.rs  event.rs  handler.rs  lib.rs  main.rs  tui.rs  ui.rs  utilities.rs
src/slurm/: config.rs  jobs.rs  misc.rs  mod.rs  nodes.rs  partitions.rs
src/widgets/: jobs.rs  misc.rs  mod.rs  nodes.rs  scrollbar.rs  table.rs  utilization.rs
