[package]
name = "slurmboard"
version = "0.0.6"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
color-eyre = "0.6.3"
crossterm = "0.27.0"
csv = "1.3.0"
ratatui = { version = "0.26.3", features = ["unstable-widget-ref"] }
serde = { version = "1.0.199", features = ["derive"] }
