[package]
name = "slurmboard"
version = "0.0.9"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.13"
color-eyre = "0.6.5"
crossterm = "0.29.0"
csv = "1.3.1"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
serde = { version = "1.0.219", features = ["derive"] }
